--- a/client_v2/src/scss/_dashboard.scss
+++ b/client_v2/src/scss/_dashboard.scss
@@ -21,6 +21,7 @@
     padding: 6px 0 3px;
     display: flex;
     .tg-characteravatar {
+        display: none;
         cursor: pointer;
         padding-right: 6px;
         width: 85px;
@@ -139,6 +140,11 @@
     .extraboard-content {
         display: flex;
         flex: 1 1 100%;
+        max-height: 80px;
+        height: 76px;
+        overflow-y: auto;
+        position: relative;
+        box-shadow: inset 0 0 12px 0px black;
     }
     .extraboard-btnmenu {
         height: 100%;
@@ -166,6 +172,7 @@
 
     .extraboard-caption {
         text-align: right;
+        line-height: 1;
         font-size: 10px;
         color: $gray-500;
         height: 2em;
@@ -173,15 +180,99 @@
         background: url($imgPath + '/borders/border-002-tiny.png') repeat-x top left;
     }
 
+    .extraboard-addin {
+    }
 
+    /* Generale */
+    //== combat Panel
+    .tg-combatpanel {
+        text-align: center;
+        background: url($imgPath + '/borders/border-002-tiny-v.png') top right repeat-y;
+        width: 56px;
+        height: 75px;
+        margin-top: 1px;
+
+        .tg-combatpanel-wrap {
+            position: relative;
+            padding: 0 6px;
+            height: 100%;
+            background: url($imgPath + '/frame/enemy-notarget-bg.jpg') no-repeat center;
+        }
+
+        .iconimg {
+            display: none;
+        }
+
+        .tg-enemy-h {
+            display: none;
+            height: 10px;
+            position: absolute;
+            top: 48px;
+            left: 6px;
+            right: 6px;
+            border:1px solid #392819;
+        }
+        .tg-enemy-m {
+            display: none;
+            height: 10px;
+            position: absolute;
+            top: 60px;
+            left: 6px;
+            right: 6px;
+            border:1px solid #392819;
+        }
+
+        .tg-enemy-h div {
+            display: block;
+            height: 100%;    
+            background: url($imgPath + '/bars/healt.jpg') center;
+            background-size: cover;
+        }
+        .tg-enemy-m div {
+            display: block;
+            height: 100%;
+            background: url($imgPath + '/bars/stamina.jpg') center;
+            background-size: cover;
+        }
+        
+        &.in-combat {
+            .tg-combatpanel-wrap {
+                background: url($imgPath + '/frame/enemy-target-icon-box.png') no-repeat top;
+            }
+            
+            .tg-enemy-h, .tg-enemy-m, .iconimg {
+                display: inline-block;
+            }
+        }
+
+    }
+    .tg-enemyicon {
+        margin: 5px auto;
+        transform: none;
+    }
+    
     /*Dashboard Tabs*/
     .shortcut-btn {
         width: 34px;
         height: 34px;
         border: 1px solid gray;
-        display: inline-block;
         float:left;
-        margin: 1px 2px 2px 0;
+        margin: 3px 2px 2px 0;
+        cursor: pointer;
+
+
+
+        span {
+            display: inline-block;
+            width: 18px;
+            height: 18px;
+            text-align: center;
+            color: $tg-brown;
+            display: block;
+            line-height: 32px;
+            text-align: center;
+            width: 100%;
+        }
     }
 }
 
