--- a/client_v2/src/scss/_scrollbar-custom.scss
+++ b/client_v2/src/scss/_scrollbar-custom.scss
@@ -29,8 +29,7 @@
   
   .ps__rail-y {
     cursor: pointer;
-    display: none;
-    opacity: 0;
+    display: block;
     transition: background-color .2s linear, opacity .2s linear;
     -webkit-transition: background-color .2s linear, opacity .2s linear;
     width: 15px;
@@ -80,6 +79,7 @@
   }
   
   .ps__thumb-y {
+    display: block;
     background-color: #483f36;
     transition: background-color .2s linear, width .2s ease-in-out;
     -webkit-transition: background-color .2s linear, width .2s ease-in-out;
@@ -100,7 +100,7 @@
   .ps__rail-y:hover > .ps__thumb-y,
   .ps__rail-y:focus > .ps__thumb-y,
   .ps__rail-y.ps--clicking .ps__thumb-y {
-    background-color: #999;
+    background-color: #83776b;
     width: 11px;
   }
   
